# everybody-codes-data

./: README.md  pyproject.toml
.github/workflows/: test.yml
ecd/: __init__.py  _impl.py  cli.py
tests/: conftest.py  requirements.txt  test_cli.py  test_impl.py  test_pkg.py
