[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "everybody-codes-data"
version = "0.4"
description = "Retrieve and decrypt puzzle input data for everybody.codes events"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Games/Entertainment :: Puzzle Games",
]
dependencies = [
    "cryptography",
    "urllib3",
]

[[project.authors]]
name = "Wim Jeantine-Glenn"
email = "hey@wimglenn.com"

[project.urls]
Homepage = "https://github.com/wimglenn/everybody-codes-data"

[project.scripts]
ecd = "ecd.cli:main"

[tool.setuptools]
packages = ["ecd"]

[tool.pytest.ini_options]
addopts = """
  --strict-markers
  --disable-socket
  --allow-unix-socket
  --cov-branch
  --cov=ecd --cov=tests
  --cov-report=html --cov-report=term-missing:skip-covered"""
